--- a/templates/add_article.html
+++ b/templates/add_article.html
@@ -58,7 +58,7 @@
             -->
             <div class="row">
                 <div class="col s12 center-align">
-                    <button class="btn-large waves-effect waves-light" type="submit" name="action">
+                    <button class="btn-large teal darken-2" type="submit" name="action">
                         Add Article
                     </button>
                 </div>
