--- a/templates/add_game_systems.html
+++ b/templates/add_game_systems.html
@@ -12,7 +12,7 @@
                 </div>
                 <div class="row">
                     <div class="col s12 center-align">
-                        <button class="btn-large waves-effect waves-light" type="submit" name="action">
+                        <button class="btn-large teal darken-2" type="submit" name="action">
                             Add Game System
                         </button>
                     </div>
