--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -36,12 +36,12 @@
                     <div class="card-action">
                         <div class="row">
                             <div class="col s4">
-                                <a class="btn" href="{{ article.article_link }}" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+                                <a class="btn teal darken-2" href="{{ article.article_link }}" target="_blank"><i class="fas fa-external-link-alt"></i></a>
                             </div>
                             
                              {% if session["user"] %}
                                 <div class="col s4">
-                                    <a class="btn" href="{{ url_for('edit_article', article_id=article._id) }}"><i class="fas fa-pencil-alt"></i></a>
+                                    <a class="btn teal darken-2" href="{{ url_for('edit_article', article_id=article._id) }}"><i class="fas fa-pencil-alt"></i></a>
                                 </div>
                                 <div class="col s4">
                                     <a class="btn red darken-4" href="{{ url_for('delete_article', article_id=article._id) }}"><i class="far fa-trash-alt"></i></a>
