--- a/templates/edit_article.html
+++ b/templates/edit_article.html
@@ -66,7 +66,7 @@
             -->
             <div class="row">
                 <div class="col s12 center-align">
-                    <button class="btn-large waves-effect waves-light" type="submit" name="action">
+                    <button class="btn-large teal darken-2" type="submit" name="action">
                         Update Article
                     </button>
                 </div>
