--- a/templates/edit_game_system.html
+++ b/templates/edit_game_system.html
@@ -13,7 +13,7 @@
                 </div>
                 <div class="row">
                     <div class="col s12 center-align">
-                        <button class="btn-large waves-effect waves-light" type="submit" name="action">
+                        <button class="btn-large teal darken-2" type="submit" name="action">
                             Update Game System
                         </button>
                     </div>
