--- a/templates/login.html
+++ b/templates/login.html
@@ -24,7 +24,7 @@
                 </div>
                 <!-- Log In -->
                 <div class="row">
-                    <button type="submit" class="col s12 btn-large light-blue darken-4 text-shadow">
+                    <button type="submit" class="col s12 btn-large teal darken-2 text-shadow">
                         Log In <i class="fas fa-sign-in-alt"></i>
                     </button>
                 </div>
