--- a/templates/view_categories.html
+++ b/templates/view_categories.html
@@ -5,32 +5,40 @@
 
     <div class="row">
         <div class="col s12">
-            <a href="{{ url_for('add_category') }}" class="btn-large light-blue accent-4 right">Add Category</a>
+            <a href="{{ url_for('add_category') }}" class="btn-large teal darken-2 right">Add Category</a>
         </div>
     </div>
     
-    <ul class="collapsible align-center">
-        {% for category in categories %}
-            <li>
-                <div class="collapsible-header">
-                    {{ category.category_name.title() }}
-                </div>
-                <div class="collapsible-body">
-                    <div class="row">
-                        <div class="col s6">
-                            {{ category.category_desc }}
+    <div class="row center-align">
+        <ul class="center-align">
+            {% for category in categories %}
+                <li>
+                    <div class="col s4">
+                        <div class="card small-card blue-grey darken-1">
+                            <div class="card-content white-text">
+                                <span class="card-title"><strong>{{ category.category_name.title() }}</strong></span>
+                                <p>{{ category.category_desc }}</p>
+                            </div>
+                            <div class="card-action">
+                                <div class="row">
+                                    <div class="col s6">
+                                        <a href="{{ url_for('edit_category', category_id=category._id) }}"
+                                            class="btn teal darken-2"><i class="fas fa-pencil-alt"></i></a>
+                                    </div>
+                                    <div class="col s6">
+                                        <a href="{{ url_for('delete_category', category_id=category._id) }}"
+                                            class="btn red darken-4"><i class="far fa-trash-alt"></i></a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="col s3">
-                            <a href="{{ url_for('edit_category', category_id=category._id) }}" class="btn-small light-blue accent-4">Edit Category</a>
-                        </div>
-                        <div class="col s3">
-                            <a href="{{ url_for('delete_category', category_id=category._id) }}" class="btn-small light-blue accent-4">Delete</a>
-                        </div>
+                        
                     </div>
-                </div>
-            </li>
-        {% endfor %}
-    </ul>
+                </li>
+            {% endfor %}
+        </ul>
+    </div>
+
     
 
 {% endblock %}
