--- a/templates/view_game_systems.html
+++ b/templates/view_game_systems.html
@@ -5,29 +5,36 @@
 
     <div class="row">
         <div class="col s12">
-            <a href="{{ url_for('add_game_system') }}" class="btn-large light-blue accent-4 right">Add Game System</a>
+            <a href="{{ url_for('add_game_system') }}" class="btn-large teal darken-2 right">Add Game System</a>
         </div>
     </div>
 
-    <ul class="collection align-center">
-        {% for game_system in game_systems %}
-            <li class="collection-item">
-                <div class="row valign-wrapper">
-                    <div class="col s6">
-                        {{ game_system.system_name }}
+    <div class="row center-align">
+        <ul class="center-align">
+            {% for game_system in game_systems %}
+                <li>
+                    <div class="col s4">
+                        <div class="card small-card blue-grey darken-1">
+                            <div class="card-content white-text">
+                                <span class="card-title"><strong>{{ game_system.system_name }}</strong></span>
+                                <p></p>
+                            </div>
+                            <div class="card-action">
+                                <div class="col s6">
+                                    <a href="{{ url_for('edit_game_system', game_system_id=game_system._id) }}"
+                                        class="btn teal darken-2 right"><i class="fas fa-pencil-alt"></i></a>
+                                </div>
+                                <div class="col s6">
+                                    <a href="{{ url_for('delete_game_system', game_system_id=game_system._id) }}"
+                                        class="btn red darken-4"><i class="far fa-trash-alt"></i></a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col s3">
-                        <a href="{{ url_for('edit_game_system', game_system_id=game_system._id) }}"
-                            class="btn-small light-blue accent-4 right">Edit Game System</a>
-                    </div>
-                    <div class="col s3">
-                        <a href="{{ url_for('delete_game_system', game_system_id=game_system._id) }}"
-                            class="btn-small light-blue accent-4 right">Delete</a>
-                    </div>
-                </div>
-            </li>
-        {% endfor %}
-    </ul>
+                </li>
+            {% endfor %}
+        </ul>
+    </div>
     
 
 {% endblock %}
